attempting fix to alignment

--- a/cocktail/css/main.css
+++ b/cocktail/css/main.css
@@ -109,6 +109,8 @@ div {
 @media screen and (max-width: 320px) {
 	#drinktitle_container {
 		font-size: .85em;
+		width:98% !important;
+		left: 1% !important;
 		top: 23%;
 	}
 	#question {
